--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
+*.pt
+
 # Distribution / packaging
 .Python
 build/
@@ -26,6 +28,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+.DS_Store
+inference*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
