--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.csv
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -134,4 +135,7 @@ __blobstorage__
 __queuestorage__
 __azurite_db*__.json
 .python_packages
+inference_log.csv
+last.pt
+.vscode/PythonImportHelper-v2-Completion.json
 inference_log.csv
